--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
     "react": "^18.2.0",
