--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-image-lightbox": "^5.1.4",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "typescript": "^5.4.3",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yet-another-react-lightbox": "^3.20.0"
   },
   "scripts": {
     "start": "react-scripts start",
