--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-cloud": "4.22.0",
     "@strapi/plugin-i18n": "4.22.0",
     "@strapi/plugin-users-permissions": "4.22.0",
     "@strapi/provider-upload-cloudinary": "^4.25.0",
     "@strapi/strapi": "4.22.0",
+    "googleapis": "^144.0.0",
+    "mysql": "^2.18.1",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
